# vibeapptodo

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  info.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/auth/: firebase.py
backend/app/core/: config.py  db.py
backend/app/data/: steps.json
backend/app/models/: common.py  projects.py  steps.py
backend/app/routes/: __init__.py  projects.py  reminders.py  steps.py
backend/app/services/: mongo.py  projects.py  reminders.py  steps.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: AuthGate.tsx
frontend/src/components/dashboard/: ProjectCard.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/steps/: StepCard.tsx
frontend/src/components/ui/: Button.tsx  ProgressRing.tsx  Spinner.tsx  UserAvatar.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts  firebase.ts  firebase_config.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Project.tsx  Signup.tsx
frontend/src/store/: projectStore.ts
frontend/src/types/: models.ts
