[project]
name = "vibeapptodo-backend"
version = "0.1.0"
description = "Backend API for VibeApp Todo Progress Tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.6",
    "motor==3.6.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "firebase-admin==6.5.0",
]